<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/app_name"
                android:textColor="@color/gray_color_8"
                android:textColorHint="@color/gray_color_4"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:textColor="@color/gray_color_8"
                android:textColorHint="@color/gray_color_6"
                android:textSize="@dimen/_16sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@color/gray_color_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:id="@+id/view_divi"
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@color/gray_color_4"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtNeedHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16sdp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>