<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="LoginModel"
            type="com.theta.location.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_action_email" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLength="40"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true"
                            android:text="@={LoginModel.email}"
                            android:textColor="@color/gray_color_6" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/gray_color_6" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_action_password" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="14"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true"
                            android:text="@={LoginModel.password}"
                            android:textColor="@color/gray_color_6" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/gray_color_6" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:onClick="@{()->LoginModel.onAuthChecking()}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>